--- a/src/components/Dropdown.css
+++ b/src/components/Dropdown.css
@@ -2,26 +2,27 @@
   position: relative;
 }
 
-.dropdown-chevron-up {
+:is(.dropdown-chevron-up, .dropdown-content) {
+  padding-top: 5px;
   position: absolute;
+  transform: translateX(-50%);
+}
+
+.dropdown-chevron-up {
   top: calc(100% - 5px);
   left: 50%;
-  transform: translateX(-50%);
   width: 0;
   height: 0;
   border-left: 5px solid transparent;
   border-right: 5px solid transparent;
-
   border-bottom: 5px solid grey;
 }
 
 .dropdown-content {
+  padding-top: 5px;
   position: absolute;
-  display: grid;
-  background-color: whitesmoke;
   top: 100%;
   left: 50%;
-  transform: translateX(-50%);
 }
 
 .dropdown-item {
@@ -30,4 +31,9 @@
   padding: 6px 12px;
   border: none;
   background-color: grey;
+}
+
+.dropdown-item:hover {
+  background-color: rgb(155, 155, 155);
+  cursor: pointer;
 }
