--- a/src/components/UserCard.css
+++ b/src/components/UserCard.css
@@ -46,10 +46,19 @@
 }
 
 .avatar-container {
+  position: relative;
   width: 45px;
   height: 45px;
   display: grid;
   place-items: center;
   background-color: grey;
   border-radius: 50%;
+}
+
+.host-icon {
+  position: absolute;
+  top: 6px;
+  left: 6px;
+  font-size: 14px;
+  color: gold;
 }
