PONG-26(feat): Move game start loader to game board view

--- a/src/Layout/Main/Game.css
+++ b/src/Layout/Main/Game.css
@@ -67,4 +67,13 @@
 
 .score {
   pointer-events: none;
+  height: 50px;
+}
+
+.loader-container {
+  display: flex;
+  align-items: center;
+  gap: 20px;
+  height: 50px;
+  pointer-events: none;
 }
